// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`watch > watch-no-subpackage > loadFiles hmr 1`] = `[]`;

exports[`watch > watch-no-subpackage > rootWatchFiles 0 1`] = `
[
  "../package.json",
  "app.json.ts",
  "app.scss",
  "app.ts",
  "components/Navbar/Navbar.json",
  "components/Navbar/Navbar.scss",
  "components/Navbar/Navbar.ts",
  "components/Navbar/Navbar.wxml",
  "pages/index/bbc.wxs",
  "pages/index/cjs.wxs",
  "pages/index/dep.wxs",
  "pages/index/dep1.wxs",
  "pages/index/dep2.wxs",
  "pages/index/esm.wxs",
  "pages/index/index.json",
  "pages/index/index.scss",
  "pages/index/index.ts",
  "pages/index/index.wxml",
  "pages/index/index.wxs.ts",
  "pages/index/xx.wxs",
  "sitemap.json",
  "theme.json",
  "workers/hello.ts",
  "workers/index.js",
  "workers/utils.js",
]
`;

exports[`watch > watch-no-subpackage > subLoadFiles 1`] = `[]`;

exports[`watch > watch-no-subpackage > subLoadFiles hmr 1`] = `[]`;

exports[`watch > watch-no-subpackage > watchFiles 1`] = `
[
  "../package.json",
  "app.json.ts",
  "app.scss",
  "app.ts",
  "components/Navbar/Navbar.json",
  "components/Navbar/Navbar.scss",
  "components/Navbar/Navbar.ts",
  "components/Navbar/Navbar.wxml",
  "pages/index/bbc.wxs",
  "pages/index/cjs.wxs",
  "pages/index/dep.wxs",
  "pages/index/dep1.wxs",
  "pages/index/dep2.wxs",
  "pages/index/esm.wxs",
  "pages/index/index.json",
  "pages/index/index.scss",
  "pages/index/index.ts",
  "pages/index/index.wxml",
  "pages/index/index.wxs.ts",
  "pages/index/xx.wxs",
  "sitemap.json",
  "theme.json",
  "workers/hello.ts",
  "workers/index.js",
  "workers/utils.js",
]
`;

exports[`watch > watch-no-subpackage > wxs 1`] = `
[
  {
    "code": "module.exports = {
  a: '1',
  v: '2'
};",
    "file": "pages/index/bbc.wxs",
  },
  {
    "code": "function tapName(event, ownerInstance) {
  console.log('tap 撒的撒打算', JSON.stringify(event));
}
module.exports = {
  tapName: tapName
};",
    "file": "pages/index/cjs.wxs",
  },
  {
    "code": "",
    "file": "pages/index/dep.wxs",
  },
  {
    "code": "",
    "file": "pages/index/dep1.wxs",
  },
  {
    "code": "",
    "file": "pages/index/dep2.wxs",
  },
  {
    "code": "var x = require('./cjs.wxs');
var xx = './dep.wxs';
var y = "./dep1.wxs";
var z = "./dep2" + '.wxs';
require(xx);
require(y);
require(z);
function tapName(event, ownerInstance) {
  console.log('tap 撒的撒打算', JSON.stringify(event));
}",
    "file": "pages/index/esm.wxs",
  },
  {
    "code": "module.exports.bar = bar;
module.exports.foo = void 0;
require("./xx.wxs");
var foo = module.exports.foo = '\\'hello world\\' from 我爱着';
function bar(d) {
  return d;
}",
    "file": "pages/index/index.wxs",
  },
  {
    "code": "",
    "file": "pages/index/xx.wxs",
  },
]
`;

exports[`watch > watch-no-subpackage 1`] = `
[
  "app.js",
  "app.json",
  "app.wxss",
  "components/Navbar/Navbar.js",
  "components/Navbar/Navbar.json",
  "components/Navbar/Navbar.wxml",
  "components/Navbar/Navbar.wxss",
  "pages/index/bbc.wxs",
  "pages/index/cjs.wxs",
  "pages/index/dep.wxs",
  "pages/index/dep1.wxs",
  "pages/index/dep2.wxs",
  "pages/index/esm.wxs",
  "pages/index/index.js",
  "pages/index/index.json",
  "pages/index/index.wxml",
  "pages/index/index.wxs",
  "pages/index/index.wxss",
  "pages/index/xx.wxs",
  "sitemap.json",
  "theme.json",
  "workers/hello.js",
  "workers/index.js",
  "workers/utils.js",
]
`;

exports[`watch > watch-no-subpackage 2`] = `Map {}`;
